Replace List.of with Arrays.asList
Enforce support of Java 8 runtime.